Bug 421030 Crash in [@ nsIFrame::GetView()] refreshing Viewpoint demo page r=roc sr=roc a=roc